--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         .vertical_slider {
             -webkit-appearance: slider-vertical;
             width: 18px;
-            margin: 0 9 0 0;
+            margin: 0 4 0 0;
         }
 
         #container_leap_protocol {
@@ -52,7 +52,7 @@
             width: 100%;
             height: 100%;
             top: 5%;
-            left: 5%;
+            left: 2%;
             z-index: 1;
         }
 
@@ -61,8 +61,8 @@
             position: absolute;
             width: 100%;
             height: 100%;
-            top: 20%;
-            left: 40%;
+            top: 45%;
+            left: 35%;
             z-index: 1;
         }
 
@@ -72,7 +72,7 @@
             width: 100%;
             height: 100%;
             top: 60%;
-            left: 5%;
+            left: 35%;
             z-index: 1;
         }
 
@@ -81,10 +81,16 @@
             position: absolute;
             width: 100%;
             height: 100%;
-            top: 40%;
-            left: 60%;
+            top: 60%;
+            left: 40%;
             z-index: 1;
         }
+
+        .audio_control_blocks {
+          display: inline-block;
+          padding: 0 10px 0 10px;
+        }
+
     </style>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
@@ -189,7 +195,7 @@
     </div>
 
     <div id="container_audio_controls">
-        <div id="container_master_controls">
+        <div id="container_master_controls" class="audio_control_blocks">
             <h4>Audio Controls</h4>
             <div>
                 <label for="mvSlider">master volume:</label>
@@ -197,8 +203,8 @@
                 <output id="mvOutput">0</output>
             </div>
         </div>
-        <br>
-        <div id="container_sampler_controls">
+
+        <div id="container_synth_controls" class="audio_control_blocks">
             <h5>Synth Controls</h5>
             <div>
                 <label for="cfSlider">frequency:</label>
@@ -226,136 +232,142 @@
                 <output id="volOutput">1</output>
             </div>
         </div>
-        <br>
-        <div>
+        <div style="display: inline-block; margin:0 15px 0 0;">  </div>
+        <div id="container_sampler_controls" class="audio_control_blocks" >
             <h5>Sampler Controls</h5>
-
-
             <div>
-                <label for="speedSlider">speed</label>
-                <input id="speedSlider" name="speedSlider" min="0.1" max="2" step="0.1" value="1" type="range" autocomplete="off" oninput="speedOutput.value = speedSlider.value">
-                <output id="speedOutput">1</output>
-            </div>
-            <div style="margin: 0 200 0 20">
-                <label for="stepsSlider">glitches</label>
-                <input id="stepsSlider" name="stepsSlider" min="1" max="16" step="1" value="1" type="range" autocomplete="off" oninput="stepsOutput.value = stepsSlider.value">
-                <output id="stepsOutput">1</output>
+                <div style="display: inline-block;">
+                    <div>
+                        <label for="speedSlider">speed</label>
+                        <input id="speedSlider" name="speedSlider" min="0.1" max="2" step="0.1" value="1" type="range" autocomplete="off" oninput="speedOutput.value = speedSlider.value">
+                        <output id="speedOutput">1</output>
+                    </div>
+                    <div style="margin: 0 200 0 20">
+                        <label for="stepsSlider">glitches</label>
+                        <input id="stepsSlider" name="stepsSlider" min="1" max="16" step="1" value="1" type="range" autocomplete="off" oninput="stepsOutput.value = stepsSlider.value">
+                        <output id="stepsOutput">1</output>
+                    </div>
+                </div>
+                <div style="display: inline-block;">
+                      <button type="button" class="btn btn-secondary" onclick="randomize()">Randomize</button>
+                </div>
             </div>
             <br>
-            <button type="button" class="btn btn-secondary" onclick="randomize()">Randomize</button>
-            <div class="block_vertical_slider">
-                <label for="aSlider1">1</label>
-                <br>
-                <input id="aSlider" class="vertical_slider" name="aSlider" min="1" max="16" step="1" value="1" type="range" autocomplete="off" oninput="aOutput.value = aSlider.value">
-                <br>
-                <output id="aOutput">1</output>
-            </div>
-            <div class="block_vertical_slider">
-                <label for="bSlider">2</label>
-                <br>
-                <input id="bSlider" class="vertical_slider" name="bSlider" min="1" max="16" step="1" value="2" type="range" autocomplete="off" oninput="bOutput.value = bSlider.value">
-                <br>
-                <output id="bOutput">2</output>
-            </div>
-            <div class="block_vertical_slider">
-                <label for="cSlider">3</label>
-                <br>
-                <input id="cSlider" class="vertical_slider" name="cSlider" min="1" max="16" step="1" value="3" type="range" autocomplete="off" oninput="cOutput.value = cSlider.value">
-                <br>
-                <output id="cOutput">3</output>
-            </div>
-            <div class="block_vertical_slider">
-                <label for="dSlider">4</label>
-                <br>
-                <input id="dSlider" class="vertical_slider" name="dSlider" min="1" max="16" step="1" value="4" type="range" autocomplete="off" oninput="dOutput.value = dSlider.value">
-                <br>
-                <output id="dOutput">4</output>
-            </div>
-            <div class="block_vertical_slider">
-                <label for="eSlider">5</label>
-                <br>
-                <input id="eSlider" class="vertical_slider" name="eSlider" min="1" max="16" step="1" value="5" type="range" autocomplete="off" oninput="eOutput.value = eSlider.value">
-                <br>
-                <output id="eOutput">5</output>
-            </div>
-            <div class="block_vertical_slider">
-                <label for="fSlider">6</label>
-                <br>
-                <input id="fSlider" class="vertical_slider" name="fSlider" min="1" max="16" step="1" value="6" type="range" autocomplete="off" oninput="fOutput.value = fSlider.value">
-                <br>
-                <output id="fOutput">6</output>
-                <br>
-            </div>
-            <div class="block_vertical_slider">
-                <label for="gSlider">7</label>
-                <br>
-                <input id="gSlider" class="vertical_slider" name="gSlider" min="1" max="16" step="1" value="7" type="range" autocomplete="off" oninput="gOutput.value = gSlider.value">
-                <br>
-                <output id="gOutput">7</output>
-                <br>
-            </div>
-            <div class="block_vertical_slider">
-                <label for="hSlider">8</label>
-                <br>
-                <input id="hSlider" class="vertical_slider" name="hSlider" min="1" max="16" step="1" value="8" type="range" autocomplete="off" oninput="hOutput.value = hSlider.value">
-                <br>
-                <output id="hOutput">8</output>
-            </div>
-            <div class="block_vertical_slider">
-                <label for="iSlider">9</label>
-                <br>
-                <input id="iSlider" class="vertical_slider" name="iSlider" min="1" max="16" step="1" value="9" type="range" autocomplete="off" oninput="iOutput.value = iSlider.value">
-                <br>
-                <output id="iOutput">9</output>
-            </div>
-            <div class="block_vertical_slider">
-                <label for="jSlider">10</label>
-                <br>
-                <input id="jSlider" class="vertical_slider" name="jSlider" min="1" max="16" step="1" value="10" type="range" autocomplete="off" oninput="jOutput.value = jSlider.value">
-                <br>
-                <output id="jOutput">10</output>
-            </div>
             <div>
-                <label for="kSlider">11</label>
-                <br>
-                <input id="kSlider" class="vertical_slider" name="kSlider" min="1" max="16" step="1" value="11" type="range" autocomplete="off" oninput="kOutput.value = kSlider.value">
-                <br>
-                <output id="kOutput">11</output>
-            </div>
-            <div class="block_vertical_slider">
-                <label for="lSlider">12</label>
-                <br>
-                <input id="lSlider" class="vertical_slider" name="lSlider" min="1" max="16" step="1" value="12" type="range" autocomplete="off" oninput="lOutput.value = lSlider.value">
-                <br>
-                <output id="lOutput">12</output>
-            </div>
-            <div>
-                <label for="mSlider">13</label>
-                <br>
-                <input id="mSlider" class="vertical_slider" name="mSlider" min="1" max="16" step="1" value="13" type="range" autocomplete="off" oninput="mOutput.value = mSlider.value">
-                <br>
-                <output id="mOutput">1</output>
-            </div>
-            <div class="block_vertical_slider">
-                <label for="nSlider">14</label>
-                <br>
-                <input id="nSlider" class="vertical_slider" name="nSlider" min="1" max="16" step="1" value="14" type="range" autocomplete="off" oninput="nOutput.value = nSlider.value">
-                <br>
-                <output id="nOutput">13</output>
-            </div>
-            <div class="block_vertical_slider">
-                <label for="oSlider">15</label>
-                <br>
-                <input id="oSlider" class="vertical_slider" name="oSlider" min="1" max="16" step="1" value="15" type="range" autocomplete="off" oninput="oOutput.value = oSlider.value">
-                <br>
-                <output id="oOutput">14</output>
-            </div>
-            <div class="block_vertical_slider">
-                <label for="pSlider">16</label>
-                <br>
-                <input id="pSlider" class="vertical_slider" name="pSlider" min="1" max="16" step="1" value="16" type="range" autocomplete="off" oninput="pOutput.value = pSlider.value">
-                <br>
-                <output id="pOutput">17</output>
+                <div class="block_vertical_slider">
+                    <label for="aSlider1">1</label>
+                    <br>
+                    <input id="aSlider" class="vertical_slider" name="aSlider" min="1" max="16" step="1" value="1" type="range" autocomplete="off" oninput="aOutput.value = aSlider.value">
+                    <br>
+                    <output id="aOutput">1</output>
+                </div>
+                <div class="block_vertical_slider">
+                    <label for="bSlider">2</label>
+                    <br>
+                    <input id="bSlider" class="vertical_slider" name="bSlider" min="1" max="16" step="1" value="2" type="range" autocomplete="off" oninput="bOutput.value = bSlider.value">
+                    <br>
+                    <output id="bOutput">2</output>
+                </div>
+                <div class="block_vertical_slider">
+                    <label for="cSlider">3</label>
+                    <br>
+                    <input id="cSlider" class="vertical_slider" name="cSlider" min="1" max="16" step="1" value="3" type="range" autocomplete="off" oninput="cOutput.value = cSlider.value">
+                    <br>
+                    <output id="cOutput">3</output>
+                </div>
+                <div class="block_vertical_slider">
+                    <label for="dSlider">4</label>
+                    <br>
+                    <input id="dSlider" class="vertical_slider" name="dSlider" min="1" max="16" step="1" value="4" type="range" autocomplete="off" oninput="dOutput.value = dSlider.value">
+                    <br>
+                    <output id="dOutput">4</output>
+                </div>
+                <div class="block_vertical_slider">
+                    <label for="eSlider">5</label>
+                    <br>
+                    <input id="eSlider" class="vertical_slider" name="eSlider" min="1" max="16" step="1" value="5" type="range" autocomplete="off" oninput="eOutput.value = eSlider.value">
+                    <br>
+                    <output id="eOutput">5</output>
+                </div>
+                <div class="block_vertical_slider">
+                    <label for="fSlider">6</label>
+                    <br>
+                    <input id="fSlider" class="vertical_slider" name="fSlider" min="1" max="16" step="1" value="6" type="range" autocomplete="off" oninput="fOutput.value = fSlider.value">
+                    <br>
+                    <output id="fOutput">6</output>
+                    <br>
+                </div>
+                <div class="block_vertical_slider">
+                    <label for="gSlider">7</label>
+                    <br>
+                    <input id="gSlider" class="vertical_slider" name="gSlider" min="1" max="16" step="1" value="7" type="range" autocomplete="off" oninput="gOutput.value = gSlider.value">
+                    <br>
+                    <output id="gOutput">7</output>
+                    <br>
+                </div>
+                <div class="block_vertical_slider">
+                    <label for="hSlider">8</label>
+                    <br>
+                    <input id="hSlider" class="vertical_slider" name="hSlider" min="1" max="16" step="1" value="8" type="range" autocomplete="off" oninput="hOutput.value = hSlider.value">
+                    <br>
+                    <output id="hOutput">8</output>
+                </div>
+                <div class="block_vertical_slider">
+                    <label for="iSlider">9</label>
+                    <br>
+                    <input id="iSlider" class="vertical_slider" name="iSlider" min="1" max="16" step="1" value="9" type="range" autocomplete="off" oninput="iOutput.value = iSlider.value">
+                    <br>
+                    <output id="iOutput">9</output>
+                </div>
+                <div class="block_vertical_slider">
+                    <label for="jSlider">10</label>
+                    <br>
+                    <input id="jSlider" class="vertical_slider" name="jSlider" min="1" max="16" step="1" value="10" type="range" autocomplete="off" oninput="jOutput.value = jSlider.value">
+                    <br>
+                    <output id="jOutput">10</output>
+                </div>
+                <div class="block_vertical_slider">
+                    <label for="kSlider">11</label>
+                    <br>
+                    <input id="kSlider" class="vertical_slider" name="kSlider" min="1" max="16" step="1" value="11" type="range" autocomplete="off" oninput="kOutput.value = kSlider.value">
+                    <br>
+                    <output id="kOutput">11</output>
+                </div>
+                <div class="block_vertical_slider">
+                    <label for="lSlider">12</label>
+                    <br>
+                    <input id="lSlider" class="vertical_slider" name="lSlider" min="1" max="16" step="1" value="12" type="range" autocomplete="off" oninput="lOutput.value = lSlider.value">
+                    <br>
+                    <output id="lOutput">12</output>
+                </div>
+                <div class="block_vertical_slider">
+                    <label for="mSlider">13</label>
+                    <br>
+                    <input id="mSlider" class="vertical_slider" name="mSlider" min="1" max="16" step="1" value="13" type="range" autocomplete="off" oninput="mOutput.value = mSlider.value">
+                    <br>
+                    <output id="mOutput">1</output>
+                </div>
+                <div class="block_vertical_slider">
+                    <label for="nSlider">14</label>
+                    <br>
+                    <input id="nSlider" class="vertical_slider" name="nSlider" min="1" max="16" step="1" value="14" type="range" autocomplete="off" oninput="nOutput.value = nSlider.value">
+                    <br>
+                    <output id="nOutput">13</output>
+                </div>
+                <div class="block_vertical_slider">
+                    <label for="oSlider">15</label>
+                    <br>
+                    <input id="oSlider" class="vertical_slider" name="oSlider" min="1" max="16" step="1" value="15" type="range" autocomplete="off" oninput="oOutput.value = oSlider.value">
+                    <br>
+                    <output id="oOutput">14</output>
+                </div>
+                <div class="block_vertical_slider">
+                    <label for="pSlider">16</label>
+                    <br>
+                    <input id="pSlider" class="vertical_slider" name="pSlider" min="1" max="16" step="1" value="16" type="range" autocomplete="off" oninput="pOutput.value = pSlider.value">
+                    <br>
+                    <output id="pOutput">17</output>
+                </div>
             </div>
         </div>
     </div>
