--- a/index.html
+++ b/index.html
@@ -97,13 +97,33 @@
         }
     </style>
 
+
+    <link rel="stylesheet" type="text/css" href="libs/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <script src="libs/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+    <script src="libs/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+    <script src="libs/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="libs/nouislider.min.css">
+    <script src="libs/nouislider.min.js"></script>
+
+    <!-- Toogle button (Bootstrap plugin) -->
+    <link href="libs/bootstrap-toggle.min.css" rel="stylesheet">
+    <script src="libs/bootstrap-toggle.min.js"></script>
+
+
+
+    <!--
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="https://www.doc.gold.ac.uk/~fbern010/noUiSlider/nouislider.min.css">
     <script src="https://www.doc.gold.ac.uk/~fbern010/noUiSlider/nouislider.min.js"></script>
+    -->
 
+    <!-- Toogle button (Bootstrap plugin) -->
+    <!--
+    <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
+    <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script> -->
 </head>
 
 <body>
@@ -377,16 +397,33 @@
     </div>
 </body>
 
-<script src="https://www.doc.gold.ac.uk/eavi/rapidmix/RapidLib.js"></script>
+
+<!-- ################# REMOTE LIBS SETUP ######################## -->
+<!-- <script src="https://www.doc.gold.ac.uk/eavi/rapidmix/RapidLib.js"></script> -->
 
 <!--DEBUG Leap plugins -->
 <!--<script src="https://js.leapmotion.com/leap-plugins-0.1.12.js"></script>-->
-<script src="https://js.leapmotion.com/leap-0.6.4.min.js"></script>
+<!-- <script src="https://js.leapmotion.com/leap-0.6.4.min.js"></script>
 <script src="https://js.leapmotion.com/leap-plugins-0.1.12.min.js"></script>
-
 <script src="https://js.leapmotion.com/leap-plugins-0.1.12-utils.min.js"></script>
 <script src="https://js.leapmotion.com/leap-widgets-0.1.0.min.js"></script>
-<script src="https://js.leapmotion.com/leap.rigged-hand-0.1.7.min.js"></script>
+<script src="https://js.leapmotion.com/leap.rigged-hand-0.1.7.min.js"></script> -->
+
+
+<!-- ################# LOCAL LIBS SETUP ######################## -->
+
+<!--DEBUG Leap plugins -->
+<!-- <script src="libs/leap-plugins-0.1.12.js"></script>-->
+
+<script src="libs/three.min.js"></script>
+<script src="libs/maxiLib.js"></script>
+<script src="libs/RapidLib.js"></script>
+
+<script src="libs/leap-0.6.4.min.js"></script>
+<script src="libs/leap-plugins-0.1.12.min.js"></script>
+<script src="libs/leap-plugins-0.1.12-utils.min.js"></script>
+<script src="libs/leap-widgets-0.1.0.min.js"></script>
+<script src="libs/leap.rigged-hand-0.1.7.min.js"></script>
 
 
 <script>
